--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,15 +24,6 @@ body::before {
   z-index: -1;
 }
 
-body .bkg {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  opacity: .5;
-}
-
 header {
   width: 100%;
   height: 30px;
@@ -43,11 +34,11 @@ header {
 .jogo {
   width: 90vw;
   height: 90vh;
-  margin: 30px auto 30px auto;
+  max-height: 650px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  align-items: stretch;
+  align-items: center;
   z-index: 1;
 }
 
@@ -71,7 +62,7 @@ header {
   animation: pisca .9s linear infinite;
 }
 .jogo .usuario {
-  width: 49%;
+  width: 45%;
   height: 90%;
   border: 3px solid #748a50;
   display: flex;
@@ -117,12 +108,14 @@ header {
   align-items: center;
 }
 .jogo .usuario .usuario-escolhe .box-escolha img {
-  width: 350px;
-  height: 350px;
+  width: 95%;
+  max-width: 350px;
+  height: 95%;
+  max-height: 350px;
 }
 
 .jogo .computador {
-  width: 40%;
+  width: 45%;
   height: 90%;
   border: 3px solid #d81c0f;
   display: flex;
@@ -137,9 +130,10 @@ header {
   align-items: center;
 }
 .jogo .computador .computador-escolhe img {
-  width: 350px;
-  height: 350px;
-  margin: 30px 0;
+  width: 80%;
+  max-width: 350px;
+  height: 80%;
+  max-height: 350px;
 }
 
 footer{
@@ -148,6 +142,51 @@ footer{
   width: 100%;
   text-align: center;
   z-index: 1;
+}
+
+@media (max-width: 750px){
+  .jogo{
+    width: 97vw;
+    max-height: 400px;
+    margin: 10px 0 0 0;
+    justify-content: center;
+    align-items: center;
+  }
+  .jogo .usuario {
+    width: 49%;
+    height: 100%;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .jogo .usuario .usuario-escolhe .boxes .box {
+    width: 80%;
+    height: 150px;
+    display: block;
+    position: relative;
+    margin: auto auto;
+  }
+  .jogo .usuario .usuario-escolhe .box-escolha {
+    width: 100%;
+    height: 100%;
+  }
+  .jogo .usuario .usuario-escolhe .box-escolha img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .jogo .computador {
+    width: 49%;
+    height: 100%;
+  }
+  .jogo .computador .computador-escolhe {
+    width: 100%;
+    height: 100%;
+  }
+  .jogo .computador .computador-escolhe img {
+    width: 100%;
+    height: 100%;
+  }
+  
 }
 
 /*# sourceMappingURL=style.css.map */
